--- a/app/src/main/res/layout/geofence_list_item.xml
+++ b/app/src/main/res/layout/geofence_list_item.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="200dp"
+    android:layout_width="225dp"
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_margin="8dp"
+    android:layout_margin="12dp"
     app:cardCornerRadius="12dp"
     android:id="@+id/card_lay"
     app:cardElevation="12dp">
@@ -41,7 +41,10 @@
         <com.google.android.material.textview.MaterialTextView
             android:layout_width="match_parent"
             android:id="@+id/lat_tv"
-            android:padding="4dp"
+            android:paddingTop="4dp"
+            android:paddingBottom="4dp"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp"
             android:textColor="#3E3E3E"
             android:textAlignment="viewEnd"
             tools:text="latitude:   -10.4567"
@@ -56,7 +59,10 @@
             android:textColor="#3e3e3e"
             android:textAlignment="viewEnd"
             tools:text="longitude:   -10.4567"
-            android:padding="4dp"
+            android:paddingTop="4dp"
+            android:paddingBottom="4dp"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/lat_tv"
