--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -79,6 +79,7 @@
             <com.google.android.material.appbar.MaterialToolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
+                app:contentInsetStart="0dp"
                 android:layout_height="wrap_content"
                 android:background="@android:color/transparent">
 
